--- a/index.ipynb
+++ b/index.ipynb
@@ -333,16 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.vector_layers.CircleMarker at 0x7f894d549d68>"
+       "<folium.vector_layers.CircleMarker at 0x7f0af1685898>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
