--- a/index.ipynb
+++ b/index.ipynb
@@ -617,7 +617,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    pass"
+    "    folium.M"
    ]
   },
   {
