Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -617,7 +617,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    folium.Map(location=)"
+    "    folium.Map(location=locat)"
    ]
   },
   {
